--- a/index.html
+++ b/index.html
@@ -1,14 +1,14 @@
-<!-- Name: Arvydas, Surname: Abaravičius, Group: EEF-23 -->
 <!DOCTYPE html>
-<html lang="en">
+<html lang="lt">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tags Example</title>
+    <meta name="description" content="Example HTML document with Lithuanian charset">
+    <title>Mano Paprastas HTML Dokumentas</title>
+    <!-- Sukūrė: Jūsų Vardas Pavardė -->
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <p>This is a <b>bold</b> text.</p>
-    <p>This is an <i>italic</i> text.</p>
-    <p>This is an <u>underlined</u> text.</p>
+    <h1>Paprastas HTML Dokumentas</h1>
+    <p>Tai yra <b>paryškintas</b>, <i>kursyvu</i> ir <u>pabrauktas</u> tekstas.</p>
 </body>
 </html>
